# shortened_url

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
auth/: __init__.py  routes.py  security.py
scripts/: dev_setup.py
tests/: __init__.py  test_auth.py
